--- a/storage/src/main/resources/application.yaml
+++ b/storage/src/main/resources/application.yaml
@@ -1,14 +1,3 @@
-logging:
-  level:
-    root: info
-
 spring:
-  datasource:
-    url: jdbc:postgresql://localhost:5432/test_raif
-    username: postgres
-    password: password
-  jpa:
-    show-sql: true
-    generate-ddl: true
-    hibernate:
-      ddl-auto: update
+  profiles:
+    active: @spring.profiles.active@
